--- a/templates/fragments/sidebar.html.twig
+++ b/templates/fragments/sidebar.html.twig
@@ -5,7 +5,7 @@
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-        <div class="sidebar p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
+        <div class="sidebar p-2 flex flex-col overflow-y-auto text-center bg-gray-900">
             <div class="text-gray-100 text-xl">
                 <div class="p-2.5 mt-1 flex items-center">
                     <i class="bi bi-app-indicator px-2 py-1 rounded-md bg-blue-600"></i>
@@ -26,28 +26,23 @@
                 />
             </div>
             <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-                <i class="bi bi-house-door-fill"></i>
-                <a href="{{ path('home_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Home</a>
+                <a href="{{ path('home_page') }}" class="w-full text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Home</a>
             </div>
             <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-                <i class="bi bi-bookmark-fill"></i>
-                <a href="{{ path('workout_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Workouts</a>
+                <a href="{{ path('workout_page') }}" class="w-full text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Workouts</a>
             </div>
-            <div class="my-4 bg-gray-600 h-[1px]"></div>
             <div
                 class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
                 <i class="bi bi-chat-left-text-fill"></i>
                 <div class="flex justify-between w-full items-center">
-                    <a href="{{ path('progress_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Progress</a>
-                    <span class="text-sm rotate-180" id="arrow">
-                    <i class="bi bi-chevron-down"></i>
-                  </span>
+                    <a href="{{ path('progress_page') }}" class="w-full text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Progress</a>
                 </div>
             </div>
-            <div
-                    class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-                <i class="bi bi-box-arrow-in-right"></i>
-                <a href="{{ path('app_logout') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Logout</a>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <a href="{{ path('update_user_page') }}" class="w-full text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Profile</a>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <a href="{{ path('app_logout') }}" class="w-full text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Logout</a>
             </div>
             <div class="absolute bottom-0 mb-10 text-white">
                 Hello, {{ app.user.username }}
