--- a/templates/progress/progress.html.twig
+++ b/templates/progress/progress.html.twig
@@ -58,8 +58,10 @@
             {% for workout in workouts %}
                 <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 px-4 mb-4">
                     <div class="bg-white p-4 border shadow">
-                        <span class="text-lg font-semibold mb-2">{{ workout.name }}</span>
-                        <span>Date: {{ workout.performedDate|date('Y-m-d H:i:s') }}</span>
+                        <div class="flex flex-col space-y-2">
+                            <span class="text-lg font-semibold mb-2">{{ workout.name }}</span>
+                            <span>Date: {{ workout.performedDate|date('Y-m-d H:i:s') }}</span>
+                        </div>
 
                         <div class="flex flex-col space-y-3">
                             {% for exercise in workout.performedExercises %}
