--- a/templates/workout/workout_list.html.twig
+++ b/templates/workout/workout_list.html.twig
@@ -23,8 +23,7 @@
                     document.getElementById('selected-' + exerciseObject.name).value = '';
                     const deleteButton = document.getElementById('delete-' + exerciseObject.name);
                     deleteButton.hidden = true;
-
-                    selectedExercises = selectedExercises.splice(selectedExercises.findIndex(selectedExercise => selectedExercise.name === exerciseObject.name), 1);
+                    selectedExercises = selectedExercises.filter(exercise => exercise.name !== exerciseObject.name)
                 }
 
                 function isExerciseAddedToWorkout(exercise) {
@@ -43,8 +42,7 @@
                                 'workout_name': document.getElementById('workout_name').value
                         })
                     })
-                        .then(response => response.json())
-                        .then(response => console.log(JSON.stringify(response)))
+                        .then(() => window.location.href = '/home')
                 }
         </script>
 {% endblock %}
