--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -27,7 +27,7 @@
 {% endblock %}
 {% block body %}
     <html lang="en">
-    <div class="bg-gray-200 min-h-screen p-8 flex flex-col space-y-2">
+    <div class="w-full bg-gray-200 min-h-screen p-8 flex flex-col space-y-2">
         <div class="text-2xl font-semibold mb-4">Hello, {{ user.username }}! This should be your dashboard</div>
         <div class="mb-4">Your Basal Metabolic Rate is {{ BMR }}</div>
         {% if bodyFatPercentage %}
