--- a/templates/workout/workout_bodypart_list.html.twig
+++ b/templates/workout/workout_bodypart_list.html.twig
@@ -1,5 +1,5 @@
 <html lang="en">
-<div class="min-h-screen flex items-center justify-center">
+<div class="min-h-screen flex flex-row w-full items-center justify-center">
     <form action="/find-exercises-bodypart" method="post" class="bg-gray-200 p-8 rounded shadow-md">
         <label for="bodyPart" class="block text-lg font-semibold mb-2">Choose a body part for which to find exercises:</label>
         <select id="bodyPart" name="bodyPart" class="p-2 border border-gray-300 rounded mb-4">
