Fixed error related to registering performed workouts

--- a/templates/progress/progress.html.twig
+++ b/templates/progress/progress.html.twig
@@ -19,6 +19,7 @@
             data.addColumn('number', 'Sets');
 
             exercisesBySelectName.forEach(function(exercise) {
+                console.log(exercise);
                 data.addRow([
                     new Date(dayjs(new Date(exercise.performedDate.date)).format('DD-MM-YYYY')),
                     exercise.weight,
